@@ -91,8 +91,8 @@ struct dis_entry disass_f8[]=
     { 0x74, 0xff, ' ', 1, "ldw ('dsp_16'),%A" },
     { 0xdc, 0xff, ' ', 2, "ldw %A,z" },
 
-    { 0xed, 0xff, ' ', 3, "ldi (%A),(z)" },
-    { 0xcf, 0xff, ' ', 3, "ldwi (%A),(z)" },
+    { 0xed, 0xff, ' ', 2, "ldi ('ny_8'),(z)" },
+    { 0xcf, 0xff, ' ', 2, "ldwi ('ny16'),(z)" },
 
     { 0x60, 0xff, ' ', 3, "push 'a16_8'" },
     { 0x61, 0xff, ' ', 2, "push ('nsp_8')" },
@@ -392,9 +392,9 @@ u8_t allowed_prefs[256]= {
   /* 9_ */    PN,PD,PD,P6,  PN,PD,PD,PD,  PD,PD,PD,PN,   0, 0, 0, 0,
   /* a_ */    PN,PN,PN,PW,  PN,PN,PN,PW,  PN,PN,PN,PW,  PN,PN,PN,PW,
   /* b_ */    PN,PN,PN,PW,  P6,P6,P6,P6,  P6,P6,PN,PN,  PN,PN,PN,PN,
-  /* c_ */    P6,P6,P6,P6,  P6,P6,P6,P6,  P6,P6,P6,P6,  P6,PD,PW,P6, // Not correct - this line is too permissive for the ldw(y), x and ldw (n, y), x instructions.
+  /* c_ */    P6,P6,P6,P6,  P6,P6,P6,P6,  P6,P6,P6,P6,  P6,PD,PW,PN, // Not correct - this line is too permissive for the ldw (y), x and ldw (n, y), x instructions.
   /* d_ */    PA,PN,PN,PN,  PN,PN,PN,PN,  PS,PN,PN,PN,  PN,PS,PN,PS,
-  /* e_ */    P6,P6,P6,P6,  P6,P6,PN,PN,  PN,P6,PN,P6,  PN, 0,PD,PD,
+  /* e_ */    P6,P6,P6,P6,  P6,P6,PN,PN,  PN,P6,PN,P6,  PN,PN,PD,PD,
   /* f_ */    PD,PA,PA,PA,  PN,PN,P6,PN,  P6,PN,P6,P6,  PD,PA,PA,PA // Not correct - this line is too permissive for the 16-bti two-operand instructions.
 };
 
